--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/unispace/77129ef0-dc97-46bf-a48f-c891c9b63d06'>Unispace - Project Manager - Traveler</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/softbank/jobs/4501323002'>Job Application for Compliance Program Manager at SoftBank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -194,7 +198,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/coursera/457cda76-e950-4d64-aacd-bda9b8fc86e4'>Coursera - Events Program Manager (Contract)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coursera/457cda76-e950-4d64-aacd-bda9b8fc86e4'>Coursera - Events Program Manager (Contract)</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -260,11 +264,11 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/total-rewards-project-manager-akcXe--_ar6y6QaKiznY58'>Total Rewards Project Manager #5315 job at Avispa Technology in Newark, NJ, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/total-rewards-project-manager-akcXe--_ar6y6QaKiznY58'>Total Rewards Project Manager #5315 job at Avispa Technology in Newark, NJ, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Newark, NJNewark, NJ</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/chanzuckerberginitiative/jobs/1940284?gh_jid=1940284'>Job Application for Project Manager, IT New Builds at Chan Zuckerberg Initiative</a></h5> 
+<h5><a href='https://boards.greenhouse.io/chanzuckerberginitiative/jobs/1940284?gh_jid=1940284'>Job Application for Project Manager, IT New Builds at Chan Zuckerberg Initiative</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -296,7 +300,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698589349-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698589349-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -342,7 +346,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Irving, TX  Irving, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -354,15 +358,15 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://axa.referrals.selectminds.com/jobs/project-manager-finance-business-operations-5780'>Project Manager - Finance Business Operations - AXA | Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axa.referrals.selectminds.com/jobs/project-manager-finance-business-operations-5780'>Project Manager - Finance Business Operations - AXA | Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/ojvrbfwa'>Logitech Careers - Project Manager, Package</a></h5> 
+<h5><a href='https://jobs.jobvite.com/logitech/job/ojvrbfwa'>Logitech Careers - Project Manager, Package</a></h5> 
 <p><span class="badge badge-light">Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ironcladts/2c7b9efe-3c4e-4d83-8555-45bbf36a9634'>Ironclad Technology Services - IT Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ironcladts/2c7b9efe-3c4e-4d83-8555-45bbf36a9634'>Ironclad Technology Services - IT Program Manager</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -426,7 +430,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qCA9Vfw0&k=Job&j=oFTmbfwP&__jvst=Employee&__jvsd=sBvgWhw4&__jvsc=Twitter&bid=ntzrpMw9'>Miniclip Careers - Go-To-Market Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qCA9Vfw0&k=Job&j=oFTmbfwP&__jvst=Employee&__jvsd=sBvgWhw4&__jvsc=Twitter&bid=ntzrpMw9'>Miniclip Careers - Go-To-Market Project Manager</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -440,10 +444,6 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698561439-project-manager-it-bluesky'>Bosch Group Project manager - IT BlueSky | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://dehavilland.applytojob.com/apply/sogMyjCkjq/Program-Project-Manager-Services-Solutions'>Program / Project Manager, Services Solutions - De Havilland Aircraft of Canada Ltd - Career Page</a></h5> 
-<p><span class="badge badge-light">Canada Toronto, ON, Canada     Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
